src/test/ui/self/self-infer.stderr
error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/self-infer.rs:4:16
   |
LL |     fn f(self: _) {}
   |                ^ not allowed in type signatures

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/self-infer.rs:4:16
   |
LL |     fn f(self: _) {}
   |                ^ not allowed in type signatures
   |
help: use type parameters instead
   |
LL |     fn f<T>(self: T) {}
   |         ^^^       ^

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/self-infer.rs:6:17
   |
LL |     fn g(self: &_) {}
   |                 ^ not allowed in type signatures

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/self-infer.rs:6:17
   |
LL |     fn g(self: &_) {}
   |                 ^ not allowed in type signatures
   |
help: use type parameters instead
   |
LL |     fn g<T>(self: &T) {}
   |         ^^^        ^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0121`.
